@@ -1,24 +1,32 @@
-EXTRA_DIST = doxyfile doxyrun.stamp cvl-reference
+EXTRA_DIST = doxyfile doxyrun.stamp cvl-reference cvl-reference.pdf
 
-doxy: cvl-reference doxyrun.stamp
+doxy: doxyrun.stamp
 
-cvl-reference:
-	mkdir cvl-reference
+cvl-reference: doxy
+
+cvl-reference.pdf: doxy
 
 doxyrun.stamp: 
-	doxygen $(builddir)/doxyfile && touch doxyrun.stamp
+	doxygen doxyfile \
+	&& make -C latex \
+	&& cp latex/refman.pdf cvl-reference.pdf \
+	&& touch doxyrun.stamp
 
 maintainer-clean-local:
-	rm -f doxyrun.stamp $(builddir)/cvl-reference/*
+	rm -f doxyrun.stamp cvl-reference/* cvl-reference.pdf
 
 install-data-local: doxy
-	installfiles=`echo $(builddir)/cvl-reference/*`; \
-	if test "$$installfiles" != '$(builddir)/cvl-reference/*'; then \
+	installfiles=`echo cvl-reference/*`; \
+	if test "$$installfiles" != 'cvl-reference/*'; then \
 	  $(mkinstalldirs) $(DESTDIR)$(docdir)/cvl-reference; \
 	  for i in $$installfiles; do \
 	    $(INSTALL_DATA) $$i $(DESTDIR)$(docdir)/cvl-reference; \
 	  done; \
+	fi; \
+	if test -f cvl-reference.pdf; then \
+	  $(INSTALL_DATA) cvl-reference.pdf $(DESTDIR)$(docdir); \
 	fi
 
 uninstall-local:
-	rm -rf $(DESTDIR)$(docdir)/cvl-reference
+	rm -rf $(DESTDIR)$(docdir)/cvl-reference; \
+	rm -f $(DESTDIR)$(docdir)/cvl-reference.pdf
