@@ -3,6 +3,8 @@
 	* configure.ac, doc/doxy/Makefile.am, doc/doxy/doxyfile.in,
 	doc/doxy/cvl-reference: Clean up rules for doxygen.
 	* NEWS: Update.
+	* doc/doxy/doxyfile.in, doc/doxy/Makefile.am: Add a reference in PDF
+	format.
 
 2008-03-04  Martin Lambers <marlam@marlam.de>
 
